--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,10 +1,10 @@
 {% extends '_layout/base.html' %}
 
-{% block title %}Контакты{% endblock title %}
+{% block title %}Contacts{% endblock title %}
 
 {% block content %}
 
-	<h4>Контакты</h4>
+	<h4>Contacts</h4>
 
 <div id="main_page">
 <dl class="dl-horizontal"><br>
