--- a/templates/_layout/base.html
+++ b/templates/_layout/base.html
@@ -16,7 +16,7 @@
 <body id="body-color">
 
 <!-- LEFT SIDE -->
-<div id="left_side">left</div>
+<div id="left_side"></div>
 <!-- LEFT SIDE -->
 
 
@@ -28,13 +28,13 @@
     <nav class="navbar navbar-default">
       <div class="container">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Главная</a></li>
-            <li><a href="{% url 'contacts' %}">Контакты</a></li>
+            <li class="active"><a href="/">Main</a></li>
+            <li><a href="{% url 'contacts' %}">Contacts</a></li>
             {% if user.is_authenticated %}
-				<li><a href="{% url 'edit_user' %}">Личный кабинет</a></li>
-				<li><a href="{% url 'logout' %}">Выйти</a></li>
+				<li><a href="{% url 'edit_user' %}">Personal page</a></li>
+				<li><a href="{% url 'logout' %}">Logout</a></li>
           	{% else %}
-				<li><a href="{% url 'login' %}">Войти</a></li>
+				<li><a href="{% url 'login' %}">Login</a></li>
 			{% endif %}
 		</ul>
 		{% if user.is_authenticated %}
@@ -62,7 +62,7 @@
 	<nav class="navbar navbar-default" id="footer">
 		<div class="container">
 			<ul class="nav navbar-nav">
-				<li><a href="{% url 'contacts' %}">Контакты</a></li>
+				<li><a href="{% url 'contacts' %}">Contacts</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -73,7 +73,7 @@
 <!--CONTAINER -->
 
 <!-- RIGHT SIDE -->
-<div id="right_side">right</div>
+<div id="right_side"></div>
 <!-- RIGHT SIDE -->
 
 
