--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 	<h4>Welcome to portfolio app</h4>
 <div>
 <p align="center">Please login or registrate
-<a href="{% url 'login' %}">Login</a></p>
+<a href="{% url 'dash:login' %}">Login</a></p>
 </div>
 
 {% endblock content %}
