--- a/templates/_layout/base.html
+++ b/templates/_layout/base.html
@@ -29,12 +29,12 @@
       <div class="container">
         <ul class="nav navbar-nav">
             <li class="active"><a href="/">Main</a></li>
-            <li><a href="{% url 'contacts' %}">Contacts</a></li>
+            <li><a href="{% url 'dash:contacts' %}">Contacts</a></li>
             {% if user.is_authenticated %}
-				<li><a href="{% url 'edit_user' %}">Personal page</a></li>
-				<li><a href="{% url 'logout' %}">Logout</a></li>
+				<li><a href="{% url 'dash:edit_user' %}">Personal page</a></li>
+				<li><a href="{% url 'dash:logout' %}">Logout</a></li>
           	{% else %}
-				<li><a href="{% url 'login' %}">Login</a></li>
+				<li><a href="{% url 'dash:login' %}">Login</a></li>
 			{% endif %}
 		</ul>
 		{% if user.is_authenticated %}
@@ -62,7 +62,7 @@
 	<nav class="navbar navbar-default" id="footer">
 		<div class="container">
 			<ul class="nav navbar-nav">
-				<li><a href="{% url 'contacts' %}">Contacts</a></li>
+				<li><a href="{% url 'dash:contacts' %}">Contacts</a></li>
 			</ul>
 		</div>
 	</nav>
