--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -11,7 +11,7 @@
 
 {% if user.is_authenticated %}
 <div id="my_form">
-    <form method="post" action="{% url 'edit_user' %}" enctype="multipart/form-data">
+    <form method="post" action="{% url 'dash:edit_user' %}" enctype="multipart/form-data">
         {% csrf_token %}
         {{form.as_p}}
         <!--
@@ -21,7 +21,7 @@
         -->
         <p><input type="submit" value="Save" /></p>        
     </form>
-    <a href="{% url 'delete_user' %}" onclick="return confirm('Удалить?')">Delete profile</a>
+    <a href="{% url 'dash:delete_user' %}" onclick="return confirm('Удалить?')">Delete profile</a>
 </div>
 
 <script type="text/javascript">
