--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -8,8 +8,8 @@
 
 <div id="main_page">
 <dl class="dl-horizontal"><br>
-	<dt>Email:</dt><dd>crystalman87@gmail.com</dd>
-	<dt>Skype:</dt><dd>cry187</dd>
+	<dt>Email:</dt><dd>user@mail.com</dd>
+	<dt>Skype:</dt><dd>test_user</dd>
 </dl>
 </div>
 
